# solving_2048_on_3x3_board

./: .gitignore  CMakeLists.txt  README.md
mini2048/: CMakeLists.txt  board.cc  board.h  types.h
src/: CMakeLists.txt  calculate.cc  enumerate.cc
test/: CMakeLists.txt  board_test.cc
